infrastructure/k8s/base/namespace.yaml
###############################################################################
# Uzavita - Kubernetes Namespace
###############################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: uzavita
  labels:
    app.kubernetes.io/part-of: uzavita
    app.kubernetes.io/managed-by: kustomize
  annotations:
    description: "Uzavita platform namespace"
