infrastructure/k8s/base/ml-service.yaml
###############################################################################
# Uzavita - ML Service
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: uzavita
  labels:
    app.kubernetes.io/name: ml-service
    app.kubernetes.io/component: ml
    app.kubernetes.io/part-of: uzavita
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: ml-service
    app.kubernetes.io/component: ml
